--- a/quiche/Cargo.toml
+++ b/quiche/Cargo.toml
@@ -21,6 +21,8 @@ include = [
   "/deps/boringssl/**/CMakeLists.txt",
   "/deps/boringssl/**/sources.cmake",
   "/deps/boringssl/LICENSE",
+  "/api/**/*.h",
+  "/api/**/*.cpp",
   "/examples",
   "/include",
   "/quiche.svg",
@@ -57,6 +59,9 @@ internal = []
 
 # Enable HTTP/3 support (disable to reduce binary size by 30-40%).
 http3 = []
+
+# Build C++ Engine (high-level API with event loop integration).
+cpp-engine = ["pkg-config"]
 
 [package.metadata.release]
 tag-prefix = ""
