--- a/quiche/quic-demo/Makefile
+++ b/quiche/quic-demo/Makefile
@@ -3,14 +3,45 @@ CC = gcc
 CXX = g++
 CFLAGS = -Wall -Wextra -O2 -g
 CXXFLAGS = -Wall -Wextra -O2 -g -std=c++11
-INCLUDES = -I./include -I../engine/include -I/usr/local/include
-LDFLAGS = -L./lib -L../engine/lib -L/usr/local/lib
-LIBS = -lquiche_engine -lquiche -lev -lpthread -ldl -lm
 
+# Detect platform and architecture
 UNAME_S := $(shell uname -s)
+UNAME_M := $(shell uname -m)
+
+# Determine platform-specific settings
 ifeq ($(UNAME_S),Darwin)
-    LDFLAGS += -framework Security -framework Foundation
+    PLATFORM = macos
+    FRAMEWORK_FLAGS = -framework Security -framework Foundation
+else ifeq ($(UNAME_S),Linux)
+    PLATFORM = linux
+    FRAMEWORK_FLAGS =
+else
+    $(error Unsupported platform: $(UNAME_S))
 endif
+
+# Determine architecture
+ifeq ($(UNAME_M),x86_64)
+    ARCH = x86_64
+else ifeq ($(UNAME_M),arm64)
+    ARCH = arm64
+else ifeq ($(UNAME_M),aarch64)
+    ARCH = arm64
+else
+    $(error Unsupported architecture: $(UNAME_M))
+endif
+
+# Mobile libs paths
+MOBILE_LIBS_ROOT = ../../mobile_libs
+MOBILE_LIBS_DIR = $(MOBILE_LIBS_ROOT)/$(PLATFORM)/$(ARCH)
+MOBILE_LIBS_INCLUDE = $(MOBILE_LIBS_ROOT)/$(PLATFORM)/include
+MOBILE_LIB = $(MOBILE_LIBS_DIR)/libquiche_engine.a
+BUILD_SCRIPT = ../../build_mobile_libs.sh
+
+# Compiler flags
+INCLUDES = -I./include -I$(MOBILE_LIBS_INCLUDE) -I/usr/local/include
+LDFLAGS = -L./lib -L/usr/local/lib $(FRAMEWORK_FLAGS)
+# Note: mobile_libs contains libquiche_engine.a + libev.a, but we still need libquiche.a from lib/
+LIBS = $(MOBILE_LIB) -L./lib -lquiche -lpthread -ldl -lm
 
 SRC_DIR = src
 BUILD_DIR = build
@@ -25,10 +56,21 @@ CLIENT_SRC = $(SRC_DIR)/client.cpp
 SERVER_OBJ = $(BUILD_DIR)/server.o
 CLIENT_OBJ = $(BUILD_DIR)/client.o
 
-all: $(BUILD_DIR) $(CLIENT) $(SERVER)
+# Check and build mobile libs if needed
+.PHONY: check-mobile-libs
+check-mobile-libs:
+	@if [ ! -f "$(MOBILE_LIB)" ]; then \
+		echo "Mobile library not found: $(MOBILE_LIB)"; \
+		echo "Building mobile_libs for $(PLATFORM):$(ARCH)..."; \
+		cd ../.. && ./build_mobile_libs.sh $(PLATFORM):$(ARCH); \
+	else \
+		echo "Using existing mobile library: $(MOBILE_LIB)"; \
+	fi
 
-client: $(BUILD_DIR) $(CLIENT)
-server: $(BUILD_DIR) $(SERVER)
+all: check-mobile-libs $(BUILD_DIR) $(CLIENT) $(SERVER)
+
+client: check-mobile-libs $(BUILD_DIR) $(CLIENT)
+server: check-mobile-libs $(BUILD_DIR) $(SERVER)
 
 $(BUILD_DIR):
 	@mkdir -p $(BUILD_DIR)
@@ -51,4 +93,4 @@ clean:
 	@rm -rf $(BUILD_DIR) $(CLIENT) $(SERVER)
 	@echo "Cleaned"
 
-.PHONY: all client server clean
+.PHONY: all client server clean check-mobile-libs
