--- a/quiche/quic-demo/Makefile
+++ b/quiche/quic-demo/Makefile
@@ -30,18 +30,18 @@ else
     $(error Unsupported architecture: $(UNAME_M))
 endif
 
-# Mobile libs paths
-MOBILE_LIBS_ROOT = ../../mobile_libs
-MOBILE_LIBS_DIR = $(MOBILE_LIBS_ROOT)/$(PLATFORM)/$(ARCH)
-MOBILE_LIBS_INCLUDE = $(MOBILE_LIBS_ROOT)/$(PLATFORM)/include
-MOBILE_LIB = $(MOBILE_LIBS_DIR)/libquiche_engine.a
-BUILD_SCRIPT = ../../build_mobile_libs.sh
+# Library paths
+LIB_ROOT = ../../lib
+LIB_DIR = $(LIB_ROOT)/$(PLATFORM)/$(ARCH)
+INCLUDE_ROOT = ../../include
+QUICHE_ENGINE_LIB = $(LIB_DIR)/libquiche_engine.a
+BUILD_SCRIPT = ../../quiche_engine_all.sh
 
 # Compiler flags
-INCLUDES = -I./include -I$(MOBILE_LIBS_INCLUDE) -I/usr/local/include
+INCLUDES = -I./include -I$(INCLUDE_ROOT) -I/usr/local/include
 LDFLAGS = -L./lib -L/usr/local/lib $(FRAMEWORK_FLAGS)
-# Note: mobile_libs contains libquiche_engine.a + libev.a, but we still need libquiche.a from lib/
-LIBS = $(MOBILE_LIB) -L./lib -lquiche -lpthread -ldl -lm
+# Note: libquiche_engine.a contains libquiche.a + libev.a + BoringSSL
+LIBS = $(QUICHE_ENGINE_LIB) -L./lib -lquiche -lpthread -ldl -lm
 
 SRC_DIR = src
 BUILD_DIR = build
@@ -56,21 +56,21 @@ CLIENT_SRC = $(SRC_DIR)/client.cpp
 SERVER_OBJ = $(BUILD_DIR)/server.o
 CLIENT_OBJ = $(BUILD_DIR)/client.o
 
-# Check and build mobile libs if needed
-.PHONY: check-mobile-libs
-check-mobile-libs:
-	@if [ ! -f "$(MOBILE_LIB)" ]; then \
-		echo "Mobile library not found: $(MOBILE_LIB)"; \
-		echo "Building mobile_libs for $(PLATFORM):$(ARCH)..."; \
-		cd ../.. && ./build_mobile_libs.sh $(PLATFORM):$(ARCH); \
+# Check and build quiche_engine library if needed
+.PHONY: check-quiche-engine
+check-quiche-engine:
+	@if [ ! -f "$(QUICHE_ENGINE_LIB)" ]; then \
+		echo "quiche_engine library not found: $(QUICHE_ENGINE_LIB)"; \
+		echo "Building quiche_engine for $(PLATFORM) $(ARCH)..."; \
+		cd ../.. && $(BUILD_SCRIPT) $(PLATFORM) $(ARCH); \
 	else \
-		echo "Using existing mobile library: $(MOBILE_LIB)"; \
+		echo "Using existing quiche_engine library: $(QUICHE_ENGINE_LIB)"; \
 	fi
 
-all: check-mobile-libs $(BUILD_DIR) $(CLIENT) $(SERVER)
+all: check-quiche-engine $(BUILD_DIR) $(CLIENT) $(SERVER)
 
-client: check-mobile-libs $(BUILD_DIR) $(CLIENT)
-server: check-mobile-libs $(BUILD_DIR) $(SERVER)
+client: check-quiche-engine $(BUILD_DIR) $(CLIENT)
+server: check-quiche-engine $(BUILD_DIR) $(SERVER)
 
 $(BUILD_DIR):
 	@mkdir -p $(BUILD_DIR)
