feat: 深度优化libquiche体积，quic-client减小19%
## 优化成果
- quic-client: 2.6M → 2.1M (-19%, -0.5M)
- 功能验证: 全部通过 ✅

## 主要优化措施
1. **BoringSSL深度裁剪**: 添加30+个CMake defines
   - 禁用SSL3/TLS1.0/1.1/1.2/DTLS
   - 禁用弱加密算法(DES/RC4/MD5/DSA/DH等)
   - 禁用扩展(ENGINE/SRP/PSK/SRTP等)
   - 使用MinSizeRel构建模式

2. **Rust编译优化**:
   - opt-level="z" (体积优化)
   - codegen-units=1 (最大化优化)
   - panic="abort" (减少panic代码)
   - strip=false (保留FFI符号)

3. **链接器优化**:
   - macOS: -Wl,-dead_strip
   - Linux: -Wl,--gc-sections
   - 函数/数据分段: -ffunction-sections -fdata-sections

4. **FFI符号导出**:
   - 添加QUICHE_EXPORT宏(168个函数)
   - 必须使用--features ffi构建

## 技术挑战与解决
- ❌ LTO: LLVM版本不兼容，已禁用
- ✅ FFI符号: 禁用全局strip，保留导出符号
- ✅ Feature标志: 显式启用ffi feature

## 修改文件
- Cargo.toml: Rust优化配置
- quiche/src/build.rs: BoringSSL CMake配置
- quiche/include/quiche.h: 符号导出宏
- quiche/quic-demo/Makefile: 链接优化标志
- quiche/quic-demo/OPTIMIZATION_RESULTS_FINAL.md: 详细结果文档

## 构建命令
```bash
cargo build --release --lib --features ffi
./quiche_engine_all.sh macos x86_64
cd quiche/quic-demo && make client
```

验证: 功能正常，客户端-服务器连接成功

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,5 +72,12 @@ url = { version = "2" }
 [profile.bench]
 debug = true
 
+# ============ 体积优化配置 ============
 [profile.release]
-debug = true
+# LTO在跨语言链接时会导致兼容性问题，暂时禁用
+# lto = "thin"
+codegen-units = 1        # 单个codegen单元以最大化优化
+opt-level = "z"          # 优化体积
+strip = false            # 不strip静态库，在最终二进制上strip
+panic = "abort"          # 减少panic展开代码
+debug = false            # 不包含调试信息
