feat: QuicheEngine API v2.0 重构 - 简化连接流程，支持重连
## 主要变更

### API 设计改进
- **构造函数**: `QuicheEngine(host, port, config)` → `QuicheEngine()`
  - 无参构造，延迟连接建立
  - 解耦配置和连接逻辑

- **删除方法**:
  - `start()` - 异步启动，错误处理复杂
  - `shutdown()` - 无法保留配置重连

- **新增方法**:
  - `open(config)` - 设置QUIC配置参数
  - `connect(host, port, timeout)` - 同步连接，阻塞直到成功或超时
  - `close(app_error, reason)` - 优雅关闭，保留配置和回调支持重连

### 核心优势

1. **同步连接，简化错误处理**
   - `connect()` 返回连接ID或空字符串
   - 使用 `condition_variable` 实现阻塞等待
   - 清晰的超时控制（默认5秒）

2. **支持连接复用**
   - `close()` 后保留配置和回调
   - 无需重新设置即可调用 `connect()` 重连
   - 适用于网络切换、断线重连场景

3. **更清晰的API调用顺序**
   ```cpp
   QuicheEngine engine;
   engine.open(config);           // 可选
   engine.setEventCallback(...);  // 必须
   std::string cid = engine.connect(host, port, timeout);
   // 使用连接...
   engine.close();
   ```

4. **强制前置条件检查**
   - `connect()` 检查 `open()` 和 `setEventCallback()` 是否已调用
   - 返回明确的错误信息，引导正确使用

## 实现细节

### quiche_engine_impl.cpp
- 添加状态标志: `mIsOpened`, `mHasCallback`
- 添加同步原语: `mConnectedCv`, `mConnectedMutex`, `mConnectComplete`, `mConnectSuccess`
- `connect()`: 启动事件循环后阻塞等待连接结果
- `notifyConnected()`: 在握手完成/失败时通知 `connect()`
- `close()`: 保留 `mConfig`, `mEventCallback`, `mIsOpened`, `mHasCallback`
- 修复名称冲突: `open()` → `::open()` (POSIX函数)

### quiche_engine.h
- 更新公共API签名
- 详细的文档注释，说明调用顺序和前置条件

### client.cpp
- 更新为新API流程
- 展示同步连接的使用方式

### Makefile
- 添加 `-lev` 链接选项（libev必须单独链接）

## 文档更新

### QUICHE_ENGINE_API.md (根目录)
- 快速入门指南
- API参考
- 使用示例

### docs/QUICHE_ENGINE_API.md (详细文档)
- 完整架构说明
- 线程模型图（包含新的同步连接流程）
- 详细API文档
- 重连示例
- 超时处理和重连策略
- API变更历史 (v1.0 → v2.0)
- 常见问题 (新增Q7-Q10)

## 测试验证

### macOS x86_64 测试
```
✓ 编译成功: libquiche_engine.a (862KB)
✓ 客户端编译成功: quic-client (2.1MB)
✓ 连接测试: CID b77dbaab
✓ 数据传输: 1,024,000 bytes
✓ RTT: 2.19ms, 无丢包
✓ 优雅关闭: 无崩溃
```

## 影响范围

### 兼容性
- **重大变更**: 与v1.0 API不兼容
- **迁移成本**: 需要修改调用代码（详见文档迁移指南）
- **平台支持**: 保持不变 (Linux/macOS/iOS/Android)

### 优势
- 更直观的API
- 更好的错误处理
- 支持重连场景
- 减少异步复杂度

## 修改文件

### 核心代码
- quiche/engine/include/quiche

--- a/quiche/quic-demo/Makefile
+++ b/quiche/quic-demo/Makefile
@@ -54,8 +54,8 @@ BUILD_SCRIPT = ../../quiche_engine_all.sh
 # Compiler flags
 INCLUDES = -I./include -I$(INCLUDE_ROOT) -I/usr/local/include
 LDFLAGS = -L./lib -L/usr/local/lib $(FRAMEWORK_FLAGS) $(LINKER_OPT_FLAGS)
-# Note: libquiche_engine.a contains libquiche.a + libev.a + BoringSSL
-LIBS = $(QUICHE_ENGINE_LIB) -L./lib -lquiche -lpthread -ldl -lm
+# Note: libquiche_engine.a contains libquiche.a + BoringSSL (libev must be linked separately)
+LIBS = $(QUICHE_ENGINE_LIB) -L./lib -lquiche -lev -lpthread -ldl -lm
 
 SRC_DIR = src
 BUILD_DIR = build
